<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createUser.CreateUserActivity">

    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createAccountFirstName"
        android:layout_width="224dp"
        android:layout_height="wrap_content"

        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <EditText
        android:id="@+id/createAccountLastName"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/createAccountUsername"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/createAccountPassword"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <EditText
        android:id="@+id/createAccountConfirmPassword"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/create_account_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>