<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createUser.CreateUserActivity">

    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Account Details"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/updateAccountFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateAccountFirstName"
        android:layout_width="224dp"
        android:layout_height="wrap_content"

        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <EditText
        android:id="@+id/updateAccountLastName"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/updateAccountUsername"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <EditText
        android:id="@+id/updateAccountPassword"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <EditText
        android:id="@+id/updateAccountConfirmPassword"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/updateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="Update Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/updateAccountDescription"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:text="Any field left blank will be unchanged when you update your account."
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/updateAccountFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>